Revision history for Perl module Protocol::DBus

0.15
- BREAKING CHANGE: The “send_*” methods of Peer.pm and
EventMessenger.pm now all return promises.
- BREAKING CHANGE: send_call() no longer throws exceptions; all failure cases
are communicated as rejections of the returned promise.
- Document “flags” parameter to send_call().

0.14 Wed 25 Mar 2020
- Clarify UTF-8 encoding requirement in documentation. (No code changes.)

0.13 Thu 12 Dec 2019
- Mojo connector now uses Mojo::Promise rather than Promise::ES6 and
  exposes “*_p” aliases for initialize() and send_call().

0.12 Tue 20 Nov 2019
- Fix POD typo that misidentifies Mojo connector.

0.11 Mon 19 Nov 2019
- BUG FIX: initialize() now returns 1 after initial truthy return.
- Implement non-blocking connect().
- Add AnyEvent and IO::Async wrapper modules.
- Improve Peer.pm documentation.

0.10 Thu 16 May 2019
- Switch from Module::Load to Module::Runtime.

0.09 Sat 2 Mar 2019
- BREAKING CHANGE: send_call() no longer accepts “on_return”. Instead,
the method returns an instance of Promise::ES6. This affords more
flexibility than “on_return” and relieves callers of the responsibility
to determine whether the response succeeded or failed.
- Rename get_connection_name() to get_unique_bus_name(). (The former
name is retained as an alias.)
- Parser.pm now detects prematurely shut-down connections.

0.08 Wed 9 Jan 2019
- Document the send_return(), send_error(), and send_signal() methods.
- Switch to native byte order as default rather than little-endian.

0.07 Thu 20 Dec 2018
- Rename do_authn() to initialize(), and make it return falsy until the
  “Hello” response arrives back. This removes the workflow state where
  authn is done but the connection name is not yet established. I don’t
  believe this should break anything since get_message() never actually
  returned the “Hello” response.
- Rename authn_pending_send() to init_pending_send().
- Added DBUS_COOKIE_SHA1 authentication support.